Song chnage in the theme

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
   </div>
 
-  <audio id="bgMusic" src="birthday.mp3" loop></audio>
-  <audio id="sisterMusic" src="terayrrhumain.mp3" loop></audio>
+  <audio id="bgMusic" src="mereliye.mp3" loop></audio>
+  <audio id="sisterMusic" src="mereliye.mp3" loop></audio>
   <audio id="bestFriendMusic" src="terayrrhumain.mp3" loop></audio>
 
   <button id="muteButton" class="mute-btn">🔊</button>
